--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# EMAILJS_EMAIL_SERVICE_ID="service_eo1yf1l"
-# EMAILJS_TEMPLATE_ID="template_gp2fmn9"
-# EMAILJS_PUBLIC_KEY="XQBSky-JJGjdD2HPP"
+# REACT_APP_EMAILJS_EMAIL_SERVICE_ID="service_eo1yf1l"
+# REACT_APP_EMAILJS_TEMPLATE_ID="template_gp2fmn9"
+# REACT_APP_EMAILJS_PUBLIC_KEY="XQBSky-JJGjdD2HPP"
 
-EMAILJS_EMAIL_SERVICE_ID="service_qnilq25"
-EMAILJS_TEMPLATE_ID="template_r2y9a5j"
-EMAILJS_PUBLIC_KEY="3waP2db4ZnjL9vFZj"
+REACT_APP_EMAILJS_EMAIL_SERVICE_ID="service_qnilq25"
+REACT_APP_EMAILJS_TEMPLATE_ID="template_r2y9a5j"
+REACT_APP_EMAILJS_PUBLIC_KEY="3waP2db4ZnjL9vFZj"
