--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,5 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Mother's Birth Doula",
   "icons": [
     {
       "src": "favicon.ico",
